--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,31 +75,44 @@ a:visited {
 
 /*inicio dos produtos, falta adição de produtos, parte de atalho/tabela lateral*/
 
+#catalogo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5em;
+
+}
+
+#catalogo section h1 {
+    display: flex;
+    font-size: 30px;
+    justify-content: center;
+
+}
+#catalogo section h4 {
+    display: flex;
+    font-size: 20px;
+    justify-content: center;
+    
+
+}
 
 .produto {
 background-color: aqua;
-grid-area: 1;
+display: flex;
+flex-direction: row;
+gap: 1vw;
 }
 
 .produto a img {
-    border-radius: 3%;
-    width: 100px;
+    
+    width: 500px;
 }
 
 .produto a:hover {
     color: #f18842;
     background: #d3c093;
-    border-radius: 20%;
+   
 }
 
-.lateral-1 {
-    background-color: red;
-    grid-area: 2;
-    height: 200px;
-}
-
-.lateral-2{
-    background-color: #8d19b1;
-    height: 200px;
-    grid-area: 3;
-}
