--- a/src/css/biquinis.css
+++ b/src/css/biquinis.css
@@ -88,7 +88,7 @@ a:visited {
 section {
     display: grid;
     grid-template-columns: auto auto;
-    background-color: white;
+    background-color: #d3c093;
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
@@ -98,7 +98,9 @@ section {
 
 #barra-lateral {
     width: 300px;
+    max-height: 80em;
     padding: 60px;
+    background-color: #cbb788;
 }
 
 .filtros {
@@ -165,7 +167,7 @@ section {
 
     border-radius: 5px;
     text-align: center;
-    background: #f9f9f9;
+    background: #d3c093;
     font-size: 17px;
 
 }
