--- a/src/css/conj.css
+++ b/src/css/conj.css
@@ -115,6 +115,14 @@ a:visited {
     object-fit: cover;
     display: block;
 }
+.produto p {
+    margin: 10px 0 0 0; 
+    padding: 5px;
+    font-size: 16px;
+    color: #333;
+    font-weight: bold;
+    text-align: center; 
+}
 
 /* RESPONSIVIDADE */
 @media (max-width: 768px) {
