--- a/src/css/maisvendidos.css
+++ b/src/css/maisvendidos.css
@@ -7,7 +7,7 @@
 
 
 .h1m {
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 20px;
     font-size: 2.5rem;
@@ -82,3 +82,20 @@
         font-size: 2rem;
     }
 }
+
+section{
+    color: black;
+}
+
+body.dark section {
+    color: #fff;
+  }
+
+  body.dark .biquini {
+    background-color: black;
+  }
+
+  body.dark .h1m {
+    color: #fff;
+  }
+
